tdf#95903: Fix return value handling in msvc_win32_x86-64 bridge

...where a return value was double-deleted if it was "complex" (i.e., generated
by callee into caller-provided memory) but not related to UNO interface types
(so doesn't need any mapping, like sequence<css.beans.Property> returned by
css.beans.XPropertySetInfo.getProperties).

Change-Id: I4cfc16ba63022686afd016ef5b64419e8dee53a4
(cherry picked from commit 27f5679c84602713e74c947d88e72cfafc02fbc8)
Reviewed-on: https://gerrit.libreoffice.org/20723
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 80acb57d5c60abd3a07b2674d1c30f926d311513)